Додат CRUD рецензија (тестирати кад Дамјан заврши базу - нисам могао тестирати јер не успевам да наместим локалну базу преко MySQL workbench-а)

--- a/API/src/main/resources/application.yml
+++ b/API/src/main/resources/application.yml
@@ -1,1 +1,12 @@
+server:
+  error:
+    include-message: always
+spring:
+  datasource:
+    url: jdbc:mysql://127.0.0.1:3306/hzs-domaci
+    username: root
+    password: sifra
 
+  jpa:
+    hibernate:
+      ddl-auto: update
