Додато лајковање и дислајковање рецензије пут методом на CRUD за рецензије. Тестирано у постмену, све ради. Проверити: инизијализовање лајкова и дислјакова при прављењу рецензије

--- a/API/pom.xml
+++ b/API/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.apostoli</groupId>
-    <artifactId>hzs.template</artifactId>
+    <artifactId>recenzije</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>Recenzije</name>
     <properties>
@@ -37,7 +37,6 @@
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
         </dependency>
-
         <!--	Documentation generation	-->
         <dependency>
             <groupId>io.springfox</groupId>
