--- a/API/src/main/resources/application.yml
+++ b/API/src/main/resources/application.yml
@@ -3,9 +3,9 @@ server:
     include-message: always
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/hzs-domaci
+    url: jdbc:mysql://localhost:3306/recenzije
     username: root
-    password: sifra
+    password: mrm1_m!rc!c
 
   jpa:
     hibernate:
