--- a/API/pom.xml
+++ b/API/pom.xml
@@ -25,7 +25,6 @@
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
 
-
         <!--	Database	-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -57,6 +56,11 @@
             <groupId>jakarta.persistence</groupId>
             <artifactId>jakarta.persistence-api</artifactId>
             <version>2.2.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>5.5.3</version>
         </dependency>
     </dependencies>
 
