--- a/API/pom.xml
+++ b/API/pom.xml
@@ -57,11 +57,12 @@
             <artifactId>jakarta.persistence-api</artifactId>
             <version>2.2.3</version>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-config</artifactId>
             <version>5.5.3</version>
         </dependency>
+        -->
     </dependencies>
 
     <build>
