--- a/hzs_frontend/package.json
+++ b/hzs_frontend/package.json
@@ -3,17 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@react-google-maps/api": "^2.7.0",
-    "@testing-library/jest-dom": "^5.15.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "google-maps-react": "^2.0.6",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.6",
-    "react-router-dom": "^6.0.2",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "@reach/combobox": "^0.16.4",
+    "@react-google-maps/api": "*",
+    "@testing-library/jest-dom": "*",
+    "@testing-library/react": "*",
+    "@testing-library/user-event": "*",
+    "google-maps-react": "*",
+    "react": "*",
+    "react-dom": "*",
+    "react-icons": "^4.3.1",
+    "react-redux": "*",
+    "react-router-dom": "*",
+    "react-scripts": "*",
+    "use-places-autocomplete": "^1.10.1",
+    "web-vitals": "*"
   },
   "scripts": {
     "start": "react-scripts start",
