--- a/hzs_frontend/package.json
+++ b/hzs_frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reach/combobox": "^0.16.4",
+    "@reach/combobox": "*",
     "@react-google-maps/api": "*",
     "@testing-library/jest-dom": "*",
     "@testing-library/react": "*",
@@ -11,11 +11,11 @@
     "google-maps-react": "*",
     "react": "*",
     "react-dom": "*",
-    "react-icons": "^4.3.1",
+    "react-icons": "*",
     "react-redux": "*",
-    "react-router-dom": "^6.0.2",
+    "react-router-dom": "*",
     "react-scripts": "*",
-    "use-places-autocomplete": "^1.10.1",
+    "use-places-autocomplete": "*",
     "web-vitals": "*"
   },
   "scripts": {
