--- a/API/src/main/resources/application.yml
+++ b/API/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/recenzije
     username: root
-    password: mrm1_m!rc!c
+    password: root
 
   jpa:
     hibernate:
